Fixes slideshow on mobile

--- a/_sass/_slideshow.scss
+++ b/_sass/_slideshow.scss
@@ -10,6 +10,7 @@
 /* Hide the images by default */
 .mySlides {
   display: none;
+  clear: both;
 }
 
 /* Next & previous buttons */
@@ -44,12 +45,10 @@
 .text {
   color: black;
   font-size: 1rem;
-  line-height: 1.2em;
+  line-height: 1.5em;
   padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 /* Number text (1/3 etc) */
